# multimdreader

./: .gitignore  CHANGELOG.md  LICENSE  PKGBUILD  README.de.md  README.en-GB.md  README.es.md  README.fr.md  README.it.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report-en.yml  bug_report-it.yml  config.yml  feature_request-en.yml  feature_request-it.yml
.github/workflows/: build.yml  deploy-pages-dashboard.yml  deploy-pages-demo.yml  deploy-pages.yml  release-linux-x86.yml  release-linux.yml  release-macos-x86.yml  release-macos.yml  release-windows-x86.yml  release-windows.yml  release.yml  workflows.zip.OK_WORKING_OLD1.BKP  workflows.zip.solo-linux-arch-x86-KO-nobuono.BKP  workflows.zip_OLD
.github/workflows/bakups/: workflows.zip.OK_WORKING_OLD2.BKP
.old-releases/0.0.1/: multimdreader.py
.releases/0.0.4_BETA/assets/: MultiMDReader_0.0.4_amd64.deb
.releases/0.0.5_STABLE/assets/: MultiMDReader_0.0.5_amd64.deb
.releases/0.0.6_STABLE/assets/: MultiMDReader_0.0.6_amd64.deb  MultiMDReader_0.0.6_i386.deb
.releases/0.0.7_STABLE/assets/: MultiMDReader_0.0.7_amd64.deb  MultiMDReader_0.0.7_i386.deb
.releases/0.0.8_BETA1/assets/: MultiMDReader_0.0.8_amd64.deb  MultiMDReader_0.0.8_i386.deb
dashboard/: index.html  style.css
public/: icon.png_ORIGI
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DocumentStats.tsx  EditorToolbar.tsx  ExportMenu.tsx  SearchBar.tsx
src/i18n/: index.ts
(+16 files in other folders)
