[package]
name = "multimdreader"
version = "0.0.8"
description = "A cross-platform Markdown file reader"
authors = ["PiBOH"]
license = "AGPL-3.0-or-later"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
